Chore:Fix: trying to fix bug in bg animation on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -134,6 +134,11 @@ body {
 @keyframes animate {
   0% {
     transform: scale(0) translateY(-90px) rotate(360deg);
+    visibility: hidden;
+    opacity: 0;
+  }
+  0% {
+    transform: scale(0) translateY(-90px) rotate(360deg);
     opacity: 1;
   }
   
